--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "author": "abhishek",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^7.0.5"
+    "express-session": "^1.17.3",
+    "mongoconnect": "^0.4.0",
+    "mongoose": "^7.0.5",
+    "node-sass-middleware": "^1.0.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
